--- a/onramp.html
+++ b/onramp.html
@@ -19,8 +19,8 @@
       <h1 class="heading-primary">Welcome to the Firefox Onramp</h1>
 
 
-            <div class="container">
-          <h1 class="heading-secondary">Change the code, change the world.</h1>
+    <div class="container">
+      <h1 class="heading-secondary">Change the code, change the world.</h1>
       <p>
         It has never been easier to get involved with Mozilla and the Firefox codebase.
         In an hour you can be building the future with us.
@@ -32,15 +32,15 @@
          <h3 class="heading-tertiary">Firefox for the Desktop</h3>
          <a href="desktop.html">
           <p>
-          Firefox for Windows, OSX or Linux is our most popular product. Start here to 
-          help us build the browser and developer tools that keep the Web free and open
-          for hundreds of millions of people.
+          Firefox for Windows, OS X or Linux is our most popular product. Help us build the
+          browser and developer tools that keep the Web free and open for hundreds of millions
+          of people.
           </p></a>
         <h3 class="heading-tertiary">Firefox for Android</h3>
         <a href="android.html">
           <p>
           Firefox for Android is the best browser for the worlds most popular mobile OS.
-          Click here to help put the power of the open Web in everybodys pocket.
+          Help put the power of the open Web in everybody's pocket.
           </p>
         </a>
         <h3 class="heading-tertiary">More ways to help.</h3>
