Little typo spotted :P

--- a/desktop-linux.html
+++ b/desktop-linux.html
@@ -108,7 +108,7 @@
           <p>You have the code, you’ve compiled Firefox. Fire it up with <code>./mach run</code> and you’re ready to start hacking.
           The next steps are up to you: join us on IRC in the <i>#introduction</i> channel, 
           follow <a href="https://twitter.com/StartMozilla">StartMozilla on Twitter</a> and 
-          find a <a href="http://www.joshmatthews.net/bugsahoy/?simple=1">a bug to start working on</a>.
+          find <a href="http://www.joshmatthews.net/bugsahoy/?simple=1">a bug to start working on</a>.
     </div>
   </section>
 
