--- a/desktop.html
+++ b/desktop.html
@@ -65,7 +65,7 @@
               Content available under a <a href="http://www.mozilla.org/foundation/licensing/website-content.html">Creative
               Commons license</a>.
             </p>
-            <p>You can <a href="https://github.com/mhoye/onramp">contribue to this page</a>,
+            <p>You can <a href="https://github.com/mhoye/onramp">contribute to this page</a>,
             and if you have any questions - or anything doesn't work! - 
             <a href="mailto:mhoye@mozilla.com">contact Mike Hoye.</a></p>
           </div>
