Add options for contribution to Platform Ops

--- a/options.html
+++ b/options.html
@@ -49,6 +49,19 @@
 
  <section id="step3">
     <div class="container">
+          <h3 class="heading-tertiary">Improve our harnesses, tools, and tests.</h3>
+          <p>Mozilla has dozens of harnesses and tools which need constant updating and cleanup.
+          Most of this is due to new features, platforms, or new use cases.  A simple way to start is
+          looking at <a href="http://www.joshmatthews.net/bugsahoy/?build=1&releng=1&reporting=1&automation=1&bugzilla=1">Good First Bugs</a>
+          or by getting involved in a larger project such as <a herf="https://wiki.mozilla.org/Auto-tools/New_Contributor/Quarter_of_Contribution">the Quarter of Contribution</a>,
+          <a href="https://www.gnome.org/outreachy/">Outreachy</a>(we try to have projects each cycle), or <a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a>.
+          <p>
+    </div>
+  </section>
+
+
+ <section id="step3">
+    <div class="container">
           <h3 class="heading-tertiary">Follow us on Twitter</h3>
           <p>We have a lot of twitter feeds at Mozilla, but a few good places to start are
           <a href="https://twitter.com/mozilla">@mozilla</a>, 
