Capitalize Hg, as a chemical symbol.

--- a/android.html
+++ b/android.html
@@ -91,7 +91,7 @@
           <p>This is the last big step. In a terminal, in your <code>src/</code> directory, enter:</p>  
           <p><code>hg clone http://hg.mozilla.org/mozilla-central/</code></p>
           <p>... and enter. This step uses mercurial to pull down the Firefox for Android source code from Mozilla-Central.
-             <code>hg</code> is the chemical symbol for mercury, if you’re wondering.</p> 
+             <code>Hg</code> is the chemical symbol for mercury, if you’re wondering.</p> 
           <p>While you’re waiting for that process to finish, take a look at <a target="_blank" href="http://mozilla-version-control-tools.readthedocs.org/en/latest/hgmozilla/index.html">our Mercurial documentation</a>.</p>   
           <p>It explains how we use version control at Mozilla to manage our code and land changes to our source tree.</p>  
     </div>
