--- a/desktop-windows.html
+++ b/desktop-windows.html
@@ -66,7 +66,7 @@
           <p>This is the last big step. Double-clicking the shortcut you’ve created will open a terminal window; start by creating a "mozilla-source" directory off of <code>C:\</code> and cd into it like so</p>  
           <p><code>cd c:/; mkdir mozilla-source; cd mozilla-source</code> </p>
           <p>Next you can pull down the Firefox source code with Mercurial, using this command: <code>hg clone https://hg.mozilla.org/mozilla-central</code> </p>
-          <p><code>hg</code> is the chemical symbol for mercury, if you’re wondering.</p> 
+          <p><code>Hg</code> is the chemical symbol for mercury, if you’re wondering.</p> 
           <p>While you’re waiting for that process to finish, take a look at <a target="_blank" href="http://mozilla-version-control-tools.readthedocs.org/en/latest/hgmozilla/index.html">our Mercurial documentation</a>.</p>   
           <p>It explains how we use version control at Mozilla to manage our code and land changes to our source tree.</p>  
     </div>
